@@ -486,24 +486,6 @@ literal|"no module name provided for ivy cache task in inline mode: It can eithe
 argument_list|)
 throw|;
 block|}
-if|if
-condition|(
-name|_resolveId
-operator|==
-literal|null
-condition|)
-block|{
-name|_resolveId
-operator|=
-name|ResolveOptions
-operator|.
-name|getDefaultResolveId
-argument_list|(
-name|getResolvedModuleId
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
 name|String
 index|[]
 name|toResolve
@@ -622,7 +604,13 @@ argument_list|(
 name|_cache
 argument_list|)
 expr_stmt|;
-comment|//        		resolve.setResolveId(_resolveId);  TODO
+name|resolve
+operator|.
+name|setResolveId
+argument_list|(
+name|_resolveId
+argument_list|)
+expr_stmt|;
 name|resolve
 operator|.
 name|execute
@@ -856,24 +844,6 @@ argument_list|(
 literal|"no conf provided for ivy cache task: It can either be set explicitely via the attribute 'conf' or via 'ivy.resolved.configurations' property or a prior call to<resolve/>"
 argument_list|)
 throw|;
-block|}
-if|if
-condition|(
-name|_resolveId
-operator|==
-literal|null
-condition|)
-block|{
-name|_resolveId
-operator|=
-name|ResolveOptions
-operator|.
-name|getDefaultResolveId
-argument_list|(
-name|getResolvedModuleId
-argument_list|()
-argument_list|)
-expr_stmt|;
 block|}
 name|_artifactFilter
 operator|=
